# pipeline-test

./: .auto-changelog-development  .auto-changelog-master  .release-it.json  CHANGELOG.md  VERSION  changelog.hbs  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yaml  ci.yml  ci.yml.stop  ci2.yaml  increase_version_major_number.yaml  increase_version_minor_number.yaml  increase_version_on_dev_push_or_pr.yaml  increase_version_patch_number.yaml  release_beta_to_dev.yaml  release_major_and_merge.yaml  release_minor_and_merge.yaml  release_patch_and_merge.yaml
pipeline-test/: pipeline-test.py
src/: pipeline-test.py
