[tool.poetry]
name = "pipeline-test"
version = "0.9.2"
description = "pipeline-test"
authors = ["morpheus65535"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.semantic_release]
version_variable = [
    "src/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"